改進經驗系統UI：將等級顯示移到波數下方
- 移除底部經驗條（解決手機顯示問題）
- 移除基地上方的等級指示器
- 在UI面板波數下方添加等級顯示
- 等級顏色會根據品質自動變化（白→青→洋紅→黃）
- 保留升級特效和經驗獲得動畫

--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
                     <div>基地血量: <span id="lives" style="color: #00ff00;">100</span></div>
                     <div>金幣: <span id="gold" style="color: #ffff00;">300</span></div>
                     <div>波數: <span id="wave" style="color: #00ffff;">1</span></div>
+                    <div>等級: <span id="level" style="color: #ff00ff;">1</span></div>
                 </div>
             </div>
             
